POS UI: In progress

--- a/packages/rma-pos/src/app/sales-ui/add-sales-invoice/add-pos-invoice.html
+++ b/packages/rma-pos/src/app/sales-ui/add-sales-invoice/add-pos-invoice.html
@@ -10,8 +10,9 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content class="page-background">
-  <ion-fab
+<!-- <ion-content class="page-background"> -->
+  <ion-content>
+      <ion-fab
     class="ion-margin-end"
     slot="fixed"
     vertical="top"
@@ -22,7 +23,7 @@
       *ngIf="calledFrom === 'add'"
       class="fab-position"
       [disabled]="salesCustomerDetialsForm.invalid"
-      (click)="submitDraft()"
+      (click)="submitDraft($event)"
     >
       <ion-icon name="add"></ion-icon>
     </ion-fab-button>
@@ -36,7 +37,7 @@
     </ion-fab-button>
   </ion-fab>
 
-  <form [formGroup]="salesCustomerDetialsForm">
+  <form [formGroup]="salesCustomerDetialsForm"  class="label-form">
     <ion-card>
       <ion-card-header>
         <ion-card-title>
@@ -215,12 +216,7 @@
               </mat-form-field>
             </ion-col>
          
-            <ion-col size-md="6">
-              <mat-form-field class="example-half-width">
-                <mat-label>Remarks</mat-label>
-                <textarea matInput formControlName="remarks"></textarea>
-              </mat-form-field>
-            </ion-col>
+          
             <ion-col >
               <mat-form-field class="example-half-width">
                 <input
@@ -249,6 +245,14 @@
                 </mat-error>
               </mat-form-field>
             </ion-col>
+          </ion-row>
+        <ion-row class="search_bar">
+          <ion-col size-md="8" >
+            <mat-form-field class="example-half-width remarks-label">
+              <mat-label>Remarks</mat-label>
+              <textarea matInput formControlName="remarks" placeholder="Cash Collected on place"></textarea>
+            </mat-form-field>
+          </ion-col>
             <ion-col>
               <mat-form-field class="mat-input-wrapper" appearance="none">
                 <mat-checkbox matInput formControlName="campaign">
@@ -302,7 +306,18 @@
         <form [formGroup]="salesInvoiceItemsForm">
           <ion-grid>
             <ion-row>
-              <ion-col>
+              <ion-col size="12">
+                <mat-form-field class="search-table example-full-width">
+                  <mat-icon matPrefix>search</mat-icon>
+                  <input
+                    matInput
+                    placeholder="Scan/Search Item Here"
+                    formControlName="filterValue"
+                    (keyup.enter)="setFilter()"
+                  />
+                </mat-form-field>
+              </ion-col>
+              <ion-col  size="12">
                 <mat-form-field class="example-full-width">
                   <mat-label>Filter from</mat-label>
                   <mat-select formControlName="filterKey">
@@ -312,16 +327,7 @@
                   </mat-select>
                 </mat-form-field>
               </ion-col>
-              <ion-col>
-                <mat-form-field class="example-full-width">
-                  <input
-                    matInput
-                    placeholder="Value"
-                    formControlName="filterValue"
-                    (keyup.enter)="setFilter()"
-                  />
-                </mat-form-field>
-              </ion-col>
+            
             </ion-row>
           </ion-grid>
       
@@ -356,7 +362,7 @@
             </ion-grid>
           </div>
       
-          <div class="grid-container" *ngIf="!isSkeletonTextVisible">
+          <div class="grid-container horizontal-boxes" *ngIf="!isSkeletonTextVisible">
             <ion-grid>
               <ion-row>
                 <ion-col size="3" *ngFor="let item of gridItems">
@@ -366,20 +372,17 @@
                     matTooltip="{{item.serial_no}}"
                     matTooltipPosition="above"
                   >
-                    <ion-card-header>
-                      <ion-card-subtitle> {{item.item_name}} </ion-card-subtitle>
-                      <ion-card-subtitle color="primary"
-                        >{{item.serial_no?item.serial_no:''}}</ion-card-subtitle
-                      >
-                    </ion-card-header>
+                  <ion-card-header>
+                    <ion-row>
+                      <ion-col class="ion-text-left pieces-num" size="6">
+                        {{item.safety_stock}} {{item.stock_uom}}
+                      </ion-col>
+                    </ion-row>
+                  </ion-card-header>
                     <ion-card-content>
+
                       <ion-row color="primary">
-                        <ion-col size="6">
-                          {{item.rate}}
-                        </ion-col>
-                        <ion-col class="ion-text-right" size="6">
-                          {{item.safety_stock}} {{item.stock_uom}}
-                        </ion-col>
+                        
                         <ion-img class="item-image" src='http://0.0.0.0:8000{{item.website_image}}'></ion-img>
                       </ion-row>
                       <ion-button
@@ -389,10 +392,17 @@
                         *ngIf="item.rate">
                       </ion-button>
                     </ion-card-content>
+                    <ion-card-footer>
+                      <ion-card-subtitle> {{item.item_name}} </ion-card-subtitle>
+                      <ion-card-subtitle color="primary"
+                        >{{item.serial_no?item.serial_no:''}}</ion-card-subtitle
+                      >
+                      <ion-col class="box-price">
+                        ${{item.rate}}
+                      </ion-col>
+                    </ion-card-footer>
                   </ion-card>
                 </ion-col>
-              </ion-row>
-              <ion-row>
                 <ion-col>
                   <ion-progress-bar
                     type="indeterminate"
@@ -412,11 +422,31 @@
                   </center>
                 </ion-col>
               </ion-row>
+              <!-- <ion-row>
+                <ion-col>
+                  <ion-progress-bar
+                    type="indeterminate"
+                    color="primary"
+                    *ngIf="isDataLoading"
+                  ></ion-progress-bar>
+      
+                  <center>
+                    <ion-button
+                      fill="outline"
+                      *ngIf="isLoadMoreVisible"
+                      color="primary"
+                      (click)="loadMoreData()"
+                    >
+                      Load More</ion-button
+                    >
+                  </center>
+                </ion-col>
+              </ion-row> -->
             </ion-grid>
           </div>
       
-          <ion-card>
-            <ion-card-header>
+          <ion-card class="table-card">
+            <!-- <ion-card-header>
               <ion-row class="align">
                 <ion-col>
                   <ion-card-title>
@@ -437,10 +467,10 @@
                   </ion-button>
                 </ion-col>
               </ion-row>
-            </ion-card-header>
+            </ion-card-header> -->
             <ion-card-content class="ion-no-padding">
               <ion-item lines="none">
-                <mat-table #table [dataSource]="dataSource" style="width: 100%">
+                <mat-table #table class="striped" [dataSource]="dataSource" style="width: 100%">
                   <ng-container matColumnDef="item">
                     <mat-header-cell *matHeaderCellDef>Item</mat-header-cell>
                     <mat-cell
@@ -609,8 +639,8 @@
         </form>
       </ion-col >
 
-      <ion-col size="3">
-        <ion-card>
+      <ion-col size="3" class="draft_box">
+        <!-- <ion-card>
           <ion-card-header>
             <ion-row class="align">
               <ion-col>
@@ -624,7 +654,7 @@
             <mat-table  [dataSource]="dataSource2">
               <ng-container [matColumnDef]="column" *ngFor="let column of displayedColumnsItems" >
                 <th mat-header-cell class="draft-table" *matHeaderCellDef>{{column}}</th>
-                <td mat-cell class="draft-table" *matCellDef="let row"> <a href="#">{{row[column]}}</a>  </td>
+                <td mat-cell class="draft-table" *matCellDef="let row"> <a href="sales/add-sales-invoice/add" (click)="onList($event)"   >{{row[column]}}</a>  </td>
               </ng-container>        
               
               <mat-header-row *matHeaderRowDef="displayedColumnsItems; sticky: true"></mat-header-row>
@@ -636,7 +666,7 @@
 
         </ion-card-content>
 
-        </ion-card>
+        </ion-card> -->
 
         <form [formGroup]="paymentForm">
           <ion-card>
@@ -911,16 +941,17 @@
             </ion-card-content>
           </ion-card>
           </form>
-      </ion-col>
-      <ion-col size="9">
-          <div>
-            <div style='float: right;'>
-              <button mat-stroked-button (click)="makeDraft()" color="primary">Make Draft</button>
-              &nbsp;&nbsp;
-              <button mat-stroked-button (click)="submitPayment()" color="primary">Pay and Submit</button>
+          <!-- <ion-col size="9"> -->
+            <div>
+              <div style='float: left;'>
+                <button class="draft-payment" mat-stroked-button (click)="makeDraft()" color="primary">Make Draft</button>
+                &nbsp;&nbsp;
+                <button class="submit-payment" mat-stroked-button (click)="submitPayment()" color="primary">Pay and Submit</button>
+              </div>
             </div>
-          </div>
+        <!-- </ion-col> -->
       </ion-col>
+   
     </ion-row>
   </ion-grid>
 
