--- a/packages/rma-pos/src/app/sales-ui/add-sales-invoice/add-pos-invoice.html
+++ b/packages/rma-pos/src/app/sales-ui/add-sales-invoice/add-pos-invoice.html
@@ -184,7 +184,7 @@
                   matInput
                   [matDatepicker]="dueDate"
                   placeholder="Due Date"
-                  readonly
+                  writeonly
                   formControlName="dueDate"
                   (dateChange)="selectedDueDate($event)"
                 />
@@ -631,9 +631,9 @@
           </ion-card-header>
           <ion-card-content>
             <mat-table  [dataSource]="dataSource2">
-              <ng-container [matColumnDef]="column" *ngFor="let column of displayedColumnsItems" >
+              <ng-container [matColumnDef]="column" *ngFor="let column of displayedColumnsItems">
                 <th mat-header-cell class="draft-table" *matHeaderCellDef>{{column}}</th>
-                <td mat-cell class="draft-table" *matCellDef="let row"> <a href="#">{{row[column]}}</a>  </td>
+                <td mat-cell class="draft-table" *matCellDef="let row"> <a (click)="editDraftList($event)" >{{row[column]}}</a>  </td>
               </ng-container>        
               
               <mat-header-row *matHeaderRowDef="displayedColumnsItems; sticky: true"></mat-header-row>
