--- a/packages/rma-pos/src/app/sales-ui/add-sales-invoice/add-pos-invoice.html
+++ b/packages/rma-pos/src/app/sales-ui/add-sales-invoice/add-pos-invoice.html
@@ -40,9 +40,7 @@
   <form [formGroup]="salesCustomerDetialsForm"  class="label-form">
     <ion-card>
       <ion-card-header>
-        <ion-card-title>
-          <ion-text color="tertiary"> Details </ion-text>
-        </ion-card-title>
+       
       </ion-card-header>
       <ion-card-content>
         <ion-grid class="ion-no-padding">
@@ -251,6 +249,17 @@
                 </mat-error>
               </mat-form-field>
             </ion-col>
+            <ion-col>
+              <ion-card-title class="invBtn">
+                <ion-text color="tertiary"> Invoice Detils </ion-text>
+              </ion-card-title>
+            </ion-col>
+
+
+
+
+
+            
           </ion-row>
         <ion-row class="search_bar">
           <ion-col size-md="8" >
@@ -300,7 +309,7 @@
 
   <ion-grid>
     <ion-row >
-      <ion-col size="9">
+      <ion-col size="8">
         <form [formGroup]="salesInvoiceItemsForm">
           <ion-grid>
             <ion-row>
@@ -315,7 +324,7 @@
                   />
                 </mat-form-field>
               </ion-col>
-              <ion-col  size="12">
+              <!-- <ion-col  size="12">
                 <mat-form-field class="example-full-width">
                   <mat-label>Filter from</mat-label>
                   <mat-select formControlName="filterKey">
@@ -324,7 +333,7 @@
                     </mat-option>
                   </mat-select>
                 </mat-form-field>
-              </ion-col>
+              </ion-col> -->
             
             </ion-row>
           </ion-grid>
@@ -637,7 +646,7 @@
         </form>
       </ion-col >
 
-      <ion-col size="3" class="draft_box">
+      <ion-col size="4" class="draft_box">
         <!-- <ion-card>
           <ion-card-header>
             <ion-row class="align">
