--- a/packages/rma-pos/src/app/sales-ui/add-sales-invoice/add-pos-invoice.html
+++ b/packages/rma-pos/src/app/sales-ui/add-sales-invoice/add-pos-invoice.html
@@ -11,15 +11,15 @@
 </ion-header>
 
 <!-- <ion-content class="page-background"> -->
-  <ion-content>
-      <ion-fab
+  <ion-content class="main-content-block">
+      <!-- <ion-fab
     class="ion-margin-end"
     slot="fixed"
     vertical="top"
     color="light"
     horizontal="end"
-  >
-    <ion-fab-button
+  > -->
+    <!-- <ion-fab-button
       *ngIf="calledFrom === 'add'"
       class="fab-position"
       [disabled]="salesCustomerDetialsForm.invalid"
@@ -35,7 +35,7 @@
     >
       <ion-icon name="create"></ion-icon>
     </ion-fab-button>
-  </ion-fab>
+  </ion-fab> -->
 
   <form [formGroup]="salesCustomerDetialsForm"  class="label-form">
     <ion-card>
@@ -251,7 +251,7 @@
             </ion-col>
             <ion-col>
               <ion-card-title class="invBtn">
-                <ion-text color="tertiary"> Invoice Detils </ion-text>
+                <ion-text color="tertiary"> Draft Invoice List </ion-text>
               </ion-card-title>
             </ion-col>
 
@@ -369,9 +369,8 @@
             </ion-grid>
           </div>
           <!-- start code for item chips -->
-          <div>
+          <div class="chip-main-wrapper horizontal-boxes">
             <mat-chip-list
-              aria-label="Fish selection" 
               *ngFor="let item of itemGroupList">
                 <mat-chip color="primary" selected>
                   {{item.name}}
@@ -379,28 +378,26 @@
             </mat-chip-list>
           </div>
           <!-- end code for item chips -->
-          <div class="grid-container horizontal-boxes" *ngIf="!isSkeletonTextVisible">
+          <div class="grid-container horizontal-boxes item-scroll-box" *ngIf="!isSkeletonTextVisible">
             <ion-grid>
               <ion-row>
-                <ion-col size="3" *ngFor="let item of gridItems">
+                <ion-col size="3" *ngFor="let item of gridItems ">
                   <ion-card
-                    class="grid-card"
+                    class="grid-card item-prod-wrapper"
                     (click)="addFromItemsGrid(item)"
                     matTooltip="{{item.serial_no}}"
                     matTooltipPosition="above"
                   >
                   <ion-card-header>
                     <ion-row>
-                      <ion-col class="ion-text-left pieces-num" size="6">
+                      <ion-col class="ion-text-left pieces-num count-pcs" size="6">
                         {{item.safety_stock}} {{item.stock_uom}}
                       </ion-col>
                     </ion-row>
                   </ion-card-header>
                     <ion-card-content>
-
                       <ion-row color="primary">
-                        
-                        <ion-img class="item-image" src='http://0.0.0.0:8000{{item.website_image}}'></ion-img>
+                        <ion-img class="item-image prd-slid-img" src='http://0.0.0.0:8000{{item.website_image}}'></ion-img>
                       </ion-row>
                       <ion-button
                         fill="clear"
@@ -656,7 +653,78 @@
         </form>
       </ion-col >
 
-      <ion-col size="4" class="draft_box">
+     
+
+
+      <ion-col size="4" class="draft_box form-pos-box">
+
+        <ion-text color="tertiary promo-offer-box-heading">Promotional Offers</ion-text>
+<div class="main-promo-offer-box">
+        <div class="grid-container horizontal-boxes item-scroll-box" *ngIf="!isSkeletonTextVisible">
+        <ion-grid>
+          <ion-row>
+            <ion-col size="3" *ngFor="let item of gridItems1 ">
+              <ion-card
+                class="grid-card item-prod-wrapper"
+                (click)="addFromItemsGrid(item)"
+                matTooltip="{{item.serial_no}}"
+                matTooltipPosition="above"
+              >
+              <ion-card-header>
+                <ion-row>
+                  <ion-col class="ion-text-left pieces-num count-pcs" size="6">
+                    {{item.safety_stock}} {{item.stock_uom}}
+                  </ion-col>
+                </ion-row>
+              </ion-card-header>
+                <ion-card-content>
+                  <ion-row color="primary">
+                    <ion-img class="item-image prd-slid-img" src='http://0.0.0.0:8000{{item.website_image}}'></ion-img>
+                  </ion-row>
+                  <ion-button
+                    fill="clear"
+                    size="small"
+                    color="primary"
+                    *ngIf="item.rate">
+                  </ion-button>
+                </ion-card-content>
+                <ion-card-footer>
+                  <ion-card-subtitle> {{item.item_name}} </ion-card-subtitle>
+                  <ion-card-subtitle color="primary"
+                    >{{item.serial_no?item.serial_no:''}}</ion-card-subtitle
+                  >
+                  <ion-col class="box-price">
+                    ${{item.rate}}
+                  </ion-col>
+                </ion-card-footer>
+              </ion-card>
+            </ion-col>
+        
+          </ion-row>
+          <!-- <ion-row>
+            <ion-col>
+              <ion-progress-bar
+                type="indeterminate"
+                color="primary"
+                *ngIf="isDataLoading"
+              ></ion-progress-bar>
+  
+              <center>
+                <ion-button
+                  fill="outline"
+                  *ngIf="isLoadMoreVisible"
+                  color="primary"
+                  (click)="loadMoreData()"
+                >
+                  Load More</ion-button
+                >
+              </center>
+            </ion-col>
+          </ion-row> -->
+        </ion-grid>
+      </div>
+    </div>
+
         <!-- <ion-card>
           <ion-card-header>
             <ion-row class="align">
@@ -683,11 +751,11 @@
 
         </ion-card-content>
 
-        </ion-card> -->
+        </ion-card>  -->
 
         <form [formGroup]="paymentForm">
           <ion-card>
-            <ion-card-header>
+            <!-- <ion-card-header>
               <ion-row class="align">
                 <ion-col>
                   <ion-card-title>
@@ -695,11 +763,12 @@
                   </ion-card-title>
                 </ion-col>
               </ion-row>
-            </ion-card-header>
+            </ion-card-header> -->
             <ion-card-content>
               <ion-grid class="ion-no-padding">
-                <ion-row class="align">
+                <ion-row class="align main-filed-pos-form">
                   <ion-col>
+                    <ion-text color="tertiary"> POS Profile </ion-text>
                     <mat-form-field class="example-full-width">
                       <input
                         required
@@ -708,7 +777,7 @@
                         matInput
                         formControlName="posProfile"
                         (focusout)="validateInput(paymentFormControls.posProfile, filteredPosProfileList)"
-                        [matAutocomplete]="profile"
+                        
                       />
                       <mat-autocomplete
                         autoActiveFirstOption
@@ -732,6 +801,7 @@
                     </mat-form-field>
                   </ion-col>
                   <ion-col>
+                    <ion-text color="tertiary"> Mode of Payment </ion-text>
                     <mat-form-field class="example-full-width">
                       <input
                         required
@@ -763,6 +833,7 @@
                     </mat-form-field>
                   </ion-col>
                   <ion-col>
+                    <ion-text color="tertiary"> VAT </ion-text>
                     <mat-form-field class="example-full-width">
                       <input
                         required
@@ -770,7 +841,7 @@
                         placeholder="VAT"
                         matInput
                         formControlName="vat"
-                        [matAutocomplete]="profile"
+                        
                       />
                       <mat-autocomplete
                         autoActiveFirstOption
@@ -795,6 +866,7 @@
                   </ion-col>
 
                   <ion-col>
+                    <ion-text color="tertiary"> Discount </ion-text>
                     <mat-form-field class="example-full-width">
                       <input
                         required
@@ -802,7 +874,7 @@
                         placeholder="Discount"
                         matInput
                         formControlName="discount"
-                        [matAutocomplete]="profile"
+                        
                       />
                       <mat-autocomplete
                         autoActiveFirstOption
@@ -827,6 +899,7 @@
                   </ion-col>
 
                   <ion-col>
+                    <ion-text color="tertiary"> Grand Total </ion-text>
                     <mat-form-field class="example-full-width">
                       <input
                         required
@@ -834,7 +907,7 @@
                         placeholder="Grand Total"
                         matInput
                         formControlName="grandTotal"
-                        [matAutocomplete]="profile"
+                        
                       />
                       <mat-autocomplete
                         autoActiveFirstOption
@@ -859,6 +932,7 @@
                   </ion-col>
 
                   <ion-col>
+                    <ion-text color="tertiary"> Received Amount </ion-text>
                     <mat-form-field class="example-full-width">
                       <input
                         required
@@ -866,7 +940,7 @@
                         placeholder="Received Amount"
                         matInput
                         formControlName="receivedAmount"
-                        [matAutocomplete]="profile"
+                        
                       />
                       <mat-autocomplete
                         autoActiveFirstOption
@@ -891,6 +965,7 @@
                   </ion-col>
 
                   <ion-col>
+                    <ion-text color="tertiary"> Change </ion-text>
                     <mat-form-field class="example-full-width">
                       <input
                         required
@@ -898,7 +973,7 @@
                         placeholder="Change"
                         matInput
                         formControlName="change"
-                        [matAutocomplete]="profile"
+                        
                       />
                       <mat-autocomplete
                         autoActiveFirstOption
@@ -923,6 +998,7 @@
                   </ion-col>
 
                   <ion-col>
+                    <ion-text color="tertiary"> Due </ion-text>
                     <mat-form-field class="example-full-width">
                       <input
                         required
@@ -930,7 +1006,7 @@
                         placeholder="Due"
                         matInput
                         formControlName="due"
-                        [matAutocomplete]="profile"
+                        
                       />
                       <mat-autocomplete
                         autoActiveFirstOption
@@ -957,13 +1033,13 @@
               </ion-grid>
             </ion-card-content>
           </ion-card>
-          </form>
+        </form>
           <!-- <ion-col size="9"> -->
             <div>
-              <div style='float: left;'>
-                <button class="draft-payment" mat-stroked-button (click)="makeDraft()" color="primary">Make Draft</button>
+              <div class="payment-draft-btn-box">
+                <button class="draft-payment" mat-stroked-button (click)="makeDraft()" color="primary">CreateDraft</button>
                 &nbsp;&nbsp;
-                <button class="submit-payment" mat-stroked-button (click)="submitPayment()" color="primary">Pay and Submit</button>
+                <button class="submit-payment" mat-stroked-button (click)="submitPayment()" color="primary">Submit</button>
               </div>
             </div>
         <!-- </ion-col> -->
