--- a/packages/rma-pos/src/app/sales-ui/add-sales-invoice/add-sales-invoice.page.html
+++ b/packages/rma-pos/src/app/sales-ui/add-sales-invoice/add-sales-invoice.page.html
@@ -38,7 +38,9 @@
   <form [formGroup]="salesInvoiceForm">
     <ion-card>
       <ion-card-header>
-       
+        <ion-card-title>
+          <ion-text color="tertiary"> Details </ion-text>
+        </ion-card-title>
       </ion-card-header>
       <ion-card-content>
         <ion-grid class="ion-no-padding">
