Task : Fetching Item Groups and filtering them according to there group names task completed

--- a/packages/rma-pos/src/app/sales-ui/add-sales-invoice/add-pos-invoice.html
+++ b/packages/rma-pos/src/app/sales-ui/add-sales-invoice/add-pos-invoice.html
@@ -374,7 +374,7 @@
               aria-label="Fish selection" 
               *ngFor="let item of displayItemGroupList">
                 <mat-chip (click)="filterItemByGroup($event)" color="primary" selected>
-                  {{item.item_group_name}}
+                  {{item.item_group}}
                 </mat-chip>
             </mat-chip-list>
             <mat-chip (click)="showMoreItems()" color="primary" selected>
