--- a/packages/rma-pos/src/app/sales-ui/add-sales-invoice/add-sales-invoice.page.scss
+++ b/packages/rma-pos/src/app/sales-ui/add-sales-invoice/add-sales-invoice.page.scss
@@ -64,3 +64,9 @@ mat-cell {
   text-align: left !important;
   width: 100%;
 }
+
+.search-item-image {
+  width: 50px;
+  height: 50px;
+  float: right;
+}
