--- a/packages/rma-pos/src/app/sales-ui/add-sales-invoice/add-pos-invoice.html
+++ b/packages/rma-pos/src/app/sales-ui/add-sales-invoice/add-pos-invoice.html
@@ -314,7 +314,7 @@
           <ion-grid>
             <ion-row>
               <ion-col size="12">
-                <mat-form-field class="search-table example-full-width">
+               <mat-form-field class="search-table example-full-width">
                   <mat-icon matPrefix>search</mat-icon>
                   <input
                   #box
@@ -336,13 +336,15 @@
                 [value]="item.item_name"
                 (click)="findValue(item.item_code)"
               >
+
                 {{ item.item_name}}
+                  
                 
               </mat-option>
             </mat-autocomplete>
                 </mat-form-field>
               </ion-col>
-              <ion-col  size="12">
+              <!-- <ion-col  size="12">
                 <mat-form-field class="example-full-width">
                   <mat-label>Filter from</mat-label>
                   <mat-select formControlName="filterKey">
@@ -351,7 +353,7 @@
                     </mat-option>
                   </mat-select>
                 </mat-form-field>
-              </ion-col>
+              </ion-col> -->
             
             </ion-row>
           </ion-grid>
@@ -395,17 +397,17 @@
                   {{item.item_group}}
                 </mat-chip>
             </mat-chip-list>
-            <mat-chip (click)="showMoreItems()" color="primary" selected>
+            <mat-chip (click)="showMoreItems()" color="primary" selected class="more-btn"> 
               More
             </mat-chip>
           </div>
           <!-- end code for item chips -->
           <div class="grid-container horizontal-boxes item-scroll-box" *ngIf="!isSkeletonTextVisible">
             <ion-grid>
-              <ion-row>
+              <ion-row class="prod-data-list" >
                 <ion-col size="3" *ngFor="let item of gridItems ">
                   <ion-card
-                    class="grid-card item-prod-wrapper"
+                    class="grid-card item-prod-wrapper "
                     (click)="addFromItemsGrid(item)"
                     matTooltip="{{item.serial_no}}"
                     matTooltipPosition="above"
@@ -673,8 +675,10 @@
               </ion-item>
             </ion-card-content>
           </ion-card>
-          <ion-text color="tertiary"> Number Of Items</ion-text>
-          <ion-text color="tertiary"> {{number_items}}</ion-text>
+          <ion-col class="pro-tot-strip">
+            <ion-text color="tertiary"> Number Of Items</ion-text>
+            <ion-text color="tertiary"> {{number_items}}</ion-text>
+          </ion-col>
         </form>
       </ion-col >
 
